--- a/index.html
+++ b/index.html
@@ -17,36 +17,36 @@
     <div class="container">
       <div class="insert__dados">
         <div class="input__box">
-          <label for="bill">Bill</label>
+          <label for="bill">Total da conta</label>
           <input type="text" id="bill">
         </div>
         
         <div class="tip">
-          <p>Select Tip %</p>
+          <p>Porcentagem %</p>
           <div class="tip__wrapper">
-            <button class="button__tip" type="button" id="cinco" value="5">5%</button>
-            <button class="button__tip" type="button" id="dez" value="10">10%</button>
-            <button class="button__tip" type="button" id="quinze" value="15">15%</button>
-            <button class="button__tip" type="button" id="vinteCinco" value="25">25%</button>
-            <button class="button__tip" type="button" id="cinquenta" value="50">50%</button>
+            <button class="button__tip" type="submit" id="cinco" value="5">5%</button>
+            <button class="button__tip" type="submit" id="dez" value="10">10%</button>
+            <button class="button__tip" type="submit" id="quinze" value="15">15%</button>
+            <button class="button__tip" type="submit" id="vinteCinco" value="25">25%</button>
+            <button class="button__tip" type="submit" id="cinquenta" value="50">50%</button>
           </div>
           </div>
           
 
 
         <div class="number__peoples">
-          <label for="numberPeoples">Number of People</label>
-          <input type="number">
+          <label for="numberPeoples">Pessoas</label>
+          <input type="number" id="peoples">
         </div>
       </div>
 
       <div class="display__result">
         <div class="tip__info">
-          <p>Tip Amount</p>
+          <p>Gorjeta</p>
           <span id="valorGorjeta">$4.27</span>
         </div>
         <div class="tip__total">
-          <p>Total</p>
+          <p>Por pessoa</p>
           <span id="valorTotal">$32.79</span>
         </div>
       </div>
