--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="assets/css/reset.css">
-  <link rel="stylesheet" href="assets/css/style.compilado.css">
-  
+  <link rel="stylesheet" href="sass/style.css">
+
   <title>Frontend Mentor | Tip calculator app</title>
 
   <section class="calculadora">
@@ -19,8 +22,9 @@
         <div class="input__box">
           <label for="bill">Total da conta</label>
           <input type="text" id="bill">
+          <p class="msg"></p>
         </div>
-        
+
         <div class="tip">
           <p>Porcentagem %</p>
           <div class="tip__wrapper">
@@ -30,24 +34,25 @@
             <button class="button__tip" type="submit" id="vinteCinco" value="25">25%</button>
             <button class="button__tip" type="submit" id="cinquenta" value="50">50%</button>
           </div>
-          </div>
-          
+        </div>
+
 
 
         <div class="number__peoples">
           <label for="numberPeoples">Pessoas</label>
           <input type="number" id="peoples">
+          <p class="msg"></p>
         </div>
       </div>
 
       <div class="display__result">
         <div class="tip__info">
           <p>Gorjeta</p>
-          <span id="valorGorjeta">$4.27</span>
+          <span id="valorGorjeta">$0</span>
         </div>
         <div class="tip__total">
           <p>Por pessoa</p>
-          <span id="valorTotal">$32.79</span>
+          <span id="valorTotal">$0</span>
         </div>
       </div>
 
@@ -59,19 +64,27 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
 
 
-  
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
