--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 
   <title>Frontend Mentor | Tip calculator app</title>
 
-  <section class="calculadora">
-    <div class="container">
+  <section class="container">
+    <div class="calculadora">
       <div class="insert__dados">
         <div class="input__box">
           <label for="bill">Total da conta</label>
-          <input type="text" id="bill">
+          <input type="number" id="bill"></input>
+          
+          
           <p class="msg"></p>
         </div>
 
@@ -33,6 +35,7 @@
             <button class="button__tip" type="submit" id="quinze" value="15">15%</button>
             <button class="button__tip" type="submit" id="vinteCinco" value="25">25%</button>
             <button class="button__tip" type="submit" id="cinquenta" value="50">50%</button>
+            <input class="custom__tip" type="number" placeholder="custom">
           </div>
         </div>
 
@@ -41,19 +44,22 @@
         <div class="number__peoples">
           <label for="numberPeoples">Pessoas</label>
           <input type="number" id="peoples">
+          <ion-icon name="person-outline" class="user"></ion-icon>
           <p class="msg"></p>
         </div>
       </div>
 
       <div class="display__result">
         <div class="tip__info">
-          <p>Gorjeta</p>
+          <p>Gorjeta<span>/por pessoa</span></p>
           <span id="valorGorjeta">$0</span>
         </div>
         <div class="tip__total">
-          <p>Por pessoa</p>
+          <p>Total<span>/por pessoa</span></p>
           <span id="valorTotal">$0</span>
         </div>
+
+        <button type="button" class="btnReset" >RESET</button>
       </div>
 
     </div>
@@ -81,9 +87,9 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Altamiro Bruno</a>.
   </div>
-
+  <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
 
